# practics

./: CMakeLists.txt  appbackend.cpp  appbackend.h  equipment_accounting.db  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: generate-qr.yml
